@@ -1,6 +1,7 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
 
-import org.mozilla.focus.gradle.tasks.GithubDetailsTask
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
@@ -13,38 +14,41 @@ buildscript {
         maven {
             url "https://nightly.maven.mozilla.org/maven2"
         }
+
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+            }
+        }
     }
 
     dependencies {
-        classpath FocusDependencies.android_gradle_plugin
-        classpath FocusDependencies.kotlin_gradle_plugin
+        classpath ComponentsDependencies.tools_androidgradle
+        classpath ComponentsDependencies.tools_kotlingradle
+        classpath FocusDependencies.osslicenses_plugin
         classpath "org.mozilla.telemetry:glean-gradle-plugin:${Versions.mozilla_glean}"
-        // NOTE: The Nimbus plugin needs to be refactored into a top-level plugin
-        // and consumed via includeBuild (using composite builds). This is a short-term
-        // workaround to consume the latest version of the Nimbus plugin matching the Focus version.
-        if (Config.readVersionFromFile().contains("a")) {
-            // Use the latest version of the plugin on the main branch (nightly).
-            classpath("org.mozilla.components:tooling-nimbus-gradle:latest.release")
-        } else {
-            // Use the latest version matching the major version of the branch (beta/release).
-            classpath("org.mozilla.components:tooling-nimbus-gradle") {
-                version {
-                    strictly("${Config.majorVersion()}.+")
-                }
-            }
-        }
+        classpath "${ApplicationServicesConfig.groupId}:tooling-nimbus-gradle:${ApplicationServicesConfig.version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    // Variables in plugins {} aren't directly supported. Hack around it by setting an
+    // intermediate variable which can pull from FocusDependenciesPlugin.kt and be used later.
+    ext {
+        detekt_plugin = Versions.detekt
+        python_envs_plugin = Versions.python_envs_plugin
+        ksp_plugin = Versions.ksp_plugin
+    }
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.19.0" // Variables in plugins {} aren't supported
+    id "io.gitlab.arturbosch.detekt" version "$detekt_plugin"
+    id("com.google.devtools.ksp").version("$ksp_plugin")
 }
 
 detekt {
-    buildUponDefaultConfig = true
     input = files("$projectDir/app")
     config = files("$projectDir/quality/detekt.yml")
     baseline = file("$projectDir/quality/detekt-baseline.xml")
@@ -54,7 +58,32 @@ detekt {
             enabled = true
             destination = file("$projectDir/build/reports/detekt.html")
         }
+        xml {
+            enabled = false
+        }
+        txt {
+            enabled = false
+        }
     }
+}
+
+tasks.withType(Detekt).configureEach() {
+    autoCorrect = true
+
+    exclude "**/test/**"
+    exclude "**/androidTest/**"
+    exclude "**/build/**"
+    exclude "**/resources/**"
+    exclude "**/tmp/**"
+}
+
+// Apply same path exclusions as for the main task
+tasks.withType(DetektCreateBaselineTask).configureEach() {
+    exclude "**/test/**"
+    exclude "**/androidTest/**"
+    exclude "**/build/**"
+    exclude "**/resources/**"
+    exclude "**/tmp/**"
 }
 
 allprojects {
@@ -67,30 +96,31 @@ allprojects {
         maven {
             url "https://maven.mozilla.org/maven2"
         }
-    }
-}
 
-subprojects {
-    // Define a reusable task for updating the version in manifest.json for modules that package
-    // a web extension. We automate this to make sure we never forget to update the version, either
-    // in local development or for releases. In both cases, we want to make sure the latest version
-    // of all extensions (including their latest changes) are installed on first start-up.
-    ext.updateExtensionVersion = { task, extDir ->
-        configure(task) {
-            from extDir
-            include 'manifest.template.json'
-            rename { 'manifest.json' }
-            into extDir
-
-            def values = ['version': rootProject.ext.config.componentsVersion.split("a|b")[0] + "." + new Date().format('MMddHHmmss')]
-            inputs.properties(values)
-            expand(values)
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+            }
         }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+subprojects {
+    afterEvaluate {
+        if (it.hasProperty('android')) {
+            android {
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_17
+                    targetCompatibility JavaVersion.VERSION_17
+                }
+            }
+        }
+    }
+}
+
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
 
 
@@ -99,26 +129,27 @@ configurations {
 }
 
 dependencies {
-    ktlint("com.pinterest:ktlint:${FocusVersions.ktlint_version}") {
+    ktlint("com.pinterest:ktlint:${Versions.ktlint}") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
     }
 }
 
-task ktlint(type: JavaExec, group: "verification") {
+tasks.register('ktlint', JavaExec) {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "app/**/*.kt", "!**/build/**/*.kt", "buildSrc/**/*.kt"
 }
 
 
-task ktlintFormat(type: JavaExec, group: "formatting") {
+tasks.register('ktlintFormat', JavaExec) {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "app/**/*.kt", "!**/build/**/*.kt", "buildSrc/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 tasks.register("listRepositories") {
